firebase notification done

--- a/frontend/angular.json
+++ b/frontend/angular.json
@@ -21,7 +21,9 @@
             "aot": true,
             "assets": [
               "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/firebase-messaging-sw.js", // add this one
+              "src/manifest.json" // this one also
             ],
             "styles": [
               "src/styles.css",
